# home-streaming

./: .gitignore
client/: .prettierrc.yaml  package-lock.json  package.json
client/pages/: index.tsx
client/styles/: globals.css
client/utils/: WHEPClient.ts
go-server/: go.mod  main  main.go
js-server/: index.js  package.json  video-dump.buf
raspi/: README.md  on-reboot.sh
rs-server/: Cargo.toml
rs-server/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
write-stream-to-mp4/: Cargo.toml
write-stream-to-mp4/ffmpeg/: two-streams-to-one-mp4.txt
write-stream-to-mp4/src/: main.rs
