[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
futures = "0.3.28"
actix-web-actors = "4.2.0"
actix-http = "3.3.1"
ffmpeg-next = "6.0.0"
actix = "0.13.0"
