[package]
name = "write-stream-to-mp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
av-codec = "0.3.0"
av-data = "0.4.1"
av-format = "0.7.0"
ffmpeg-next = "6.0.0"
futures = "0.3.28"
openh264 = "0.4.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
